--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <article class="card">
         <div class="carousel">
             <ul class="slides">
-                <input type="radio" name="radio-buttons" id="img-1" checked />
+
+                <input type="radio" name="radio-buttons" id="img-1" checked/>
                 <li class="slide-container">
                     <div class="slide-image">
                         <img src="/img/neuron-front.jpg">
@@ -31,7 +32,7 @@
                     </div>
                 </li>
 
-                <input type="radio" name="radio-buttons" id="img-2" />
+                <input type="radio" name="radio-buttons" id="img-2"/>
                 <li class="slide-container">
                     <div class="slide-image">
                         <img src="/img/neuron-dress-front.jpg">
@@ -46,7 +47,7 @@
                     </div>
                 </li>
 
-                <input type="radio" name="radio-buttons" id="img-3" />
+                <input type="radio" name="radio-buttons" id="img-3"/>
                 <li class="slide-container">
                     <div class="slide-image">
                         <img src="/img/neuron-dress-window.jpg">
@@ -61,7 +62,7 @@
                     </div>
                 </li>
 
-                <input type="radio" name="radio-buttons" id="img-4" />
+                <input type="radio" name="radio-buttons" id="img-4"/>
                 <li class="slide-container">
                     <div class="slide-image">
                         <img src="/img/neuron-with-mesh.jpg">
@@ -76,7 +77,7 @@
                     </div>
                 </li>
 
-                <input type="radio" name="radio-buttons" id="img-5" />
+                <input type="radio" name="radio-buttons" id="img-5"/>
                 <li class="slide-container">
                     <div class="slide-image">
                         <img src="/img/neuron-dress-close.jpg">
@@ -96,7 +97,7 @@
         <div class="card-info">
             <h2>Title Lorem ipsum dolor sit amet</h2>
             <time>2020 03 28</time>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
             <button type="button" class="see-more-btn" id="see-more-btn">See more</button>
         </div>
 
