broken but in a different way

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <article class="card">
         <div class="carousel">
-            <ul class="slides">
+            <!-- <ul class="slides">
 
                 <input type="radio" name="radio-buttons" id="img-1" checked/>
                 <li class="slide-container">
@@ -90,6 +90,28 @@
                             <span>&rsaquo;</span>
                         </label>
                     </div>
+                </li>
+            </ul> -->
+
+            <ul class="slides">
+                <li class="slide-container">
+                    <img src="/img/neuron-front.jpg">
+                </li>
+
+                <li class="slide-container">
+                    <img src="/img/neuron-dress-front.jpg">
+                </li>
+
+                <li class="slide-container">
+                    <img src="/img/neuron-dress-window.jpg">
+                </li>
+
+                <li class="slide-container">
+                    <img src="/img/neuron-with-mesh.jpg">
+                </li>
+
+                <li class="slide-container">
+                    <img src="/img/neuron-dress-close.jpg">
                 </li>
             </ul>
         </div>
