--- a/index.html
+++ b/index.html
@@ -95,23 +95,23 @@
 
             <ul class="slides">
                 <li class="slide-container">
-                    <img src="/img/neuron-front.jpg">
+                    <img src="img/neuron-front.jpg">
                 </li>
 
                 <li class="slide-container">
-                    <img src="/img/neuron-dress-front.jpg">
+                    <img src="img/neuron-dress-front.jpg">
                 </li>
 
                 <li class="slide-container">
-                    <img src="/img/neuron-dress-window.jpg">
+                    <img src="img/neuron-dress-window.jpg">
                 </li>
 
                 <li class="slide-container">
-                    <img src="/img/neuron-with-mesh.jpg">
+                    <img src="img/neuron-with-mesh.jpg">
                 </li>
 
                 <li class="slide-container">
-                    <img src="/img/neuron-dress-close.jpg">
+                    <img src="img/neuron-dress-close.jpg">
                 </li>
             </ul>
         </div>
