scarousel works but not at all sizes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,39 @@
 <body>
     <article class="card">
         <div class="carousel">
-            <!-- <ul class="slides">
+            <div class="slide">
+                <img src="img/neuron-front.jpg">
+            </div>
+
+            <div class="slide">
+                <img src="img/neuron-dress-front.jpg">
+            </div>
+
+            <div class="slide">
+                <img src="img/neuron-dress-window.jpg">
+            </div>
+
+            <div class="slide">
+                <img src="img/neuron-with-mesh.jpg">
+            </div>
+
+            <div class="slide">
+                <img src="img/neuron-dress-close.jpg">
+            </div>
+         </div>
+
+        <div class="card-info">
+            <h2>Title Lorem ipsum dolor sit amet</h2>
+            <time>2020 03 28</time>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <button type="button" class="see-more-btn" id="see-more-btn">See more</button>
+        </div>
+
+    </article>
+</body>
+</html>
+
+<!-- <ul class="slides">
 
                 <input type="radio" name="radio-buttons" id="img-1" checked/>
                 <li class="slide-container">
@@ -92,37 +124,3 @@
                     </div>
                 </li>
             </ul> -->
-
-            <ul class="slides">
-                <li class="slide-container">
-                    <img src="img/neuron-front.jpg">
-                </li>
-
-                <li class="slide-container">
-                    <img src="img/neuron-dress-front.jpg">
-                </li>
-
-                <li class="slide-container">
-                    <img src="img/neuron-dress-window.jpg">
-                </li>
-
-                <li class="slide-container">
-                    <img src="img/neuron-with-mesh.jpg">
-                </li>
-
-                <li class="slide-container">
-                    <img src="img/neuron-dress-close.jpg">
-                </li>
-            </ul>
-        </div>
-
-        <div class="card-info">
-            <h2>Title Lorem ipsum dolor sit amet</h2>
-            <time>2020 03 28</time>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-            <button type="button" class="see-more-btn" id="see-more-btn">See more</button>
-        </div>
-
-    </article>
-</body>
-</html>
